Fix HTML structure and update title text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>🔥 سكسي عراقي 🔥</title>
+<title>🔥 سكسي عراقية 🔥</title>
 
 <style>
 body {
@@ -42,3 +42,4 @@ video {
 
 </body>
 </html>
+
