Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ video {
 
 <body>
 
-<h1>🔥 سكسي عراقي 🔥</h1>
+<h1>🔥 سكسي عراقية 🔥</h1>
 
 <form method="POST" enctype="multipart/form-data">
   <input type="file" name="video" accept="video/*">
@@ -42,4 +42,5 @@ video {
 
 </body>
 </html>
+
 
